--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/http": "^5.2.11",
     "@angular/platform-browser": "^5.2.11",
     "@angular/platform-browser-dynamic": "^5.2.11",
+    "@ionic-native/barcode-scanner": "^4.16.0",
     "@ionic-native/camera": "^4.12.0",
     "@ionic-native/core": "^4.8.0",
     "@ionic-native/geolocation": "^4.12.0",
@@ -31,12 +32,13 @@
     "cordova-android": "7.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "^3.9.2",
     "ionicons": "^3.0.0",
+    "phonegap-plugin-barcodescanner": "^8.0.0",
     "rxjs": "^5.5.11",
     "sw-toolbox": "^3.6.0",
     "zone.js": "^0.8.26"
@@ -53,7 +55,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "phonegap-plugin-barcodescanner": {}
     },
     "platforms": [
       "android"
